[gd_scene load_steps=5 format=3 uid="uid://1rylg17uwltw"]

[ext_resource type="Script" uid="uid://1rjr3yrqwueu" path="res://src/ui_parts/settings_menu.gd" id="1_1gf4m"]
[ext_resource type="Texture2D" uid="uid://c528knojuxbw6" path="res://assets/icons/Languages.svg" id="2_ndyp7"]
[ext_resource type="Script" uid="uid://1hox6gd5pxku" path="res://src/ui_widgets/BetterLineEdit.gd" id="3_kjrrb"]
[ext_resource type="FontFile" uid="uid://clpf84p1lfwlp" path="res://assets/fonts/Font.ttf" id="3_ug3fu"]

[node name="SettingsMenu" type="PanelContainer"]
custom_minimum_size = Vector2(660, 420)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -128.0
offset_right = 180.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"OverlayPanel"
script = ExtResource("1_1gf4m")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TopHBox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6
alignment = 1

[node name="Language" type="Button" parent="VBoxContainer/TopHBox"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
mouse_default_cursor_shape = 2
icon = ExtResource("2_ndyp7")

[node name="SearchField" type="LineEdit" parent="VBoxContainer/TopHBox"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ug3fu")
script = ExtResource("3_kjrrb")
metadata/_custom_type_script = "uid://1hox6gd5pxku"

[node name="SearchResultsPanel" type="PanelContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="SearchResultsScrollContainer" type="ScrollContainer" parent="VBoxContainer/SearchResultsPanel"]
unique_name_in_owner = true
layout_mode = 2
horizontal_scroll_mode = 0

[node name="ContentContainer" type="MarginContainer" parent="VBoxContainer/SearchResultsPanel/SearchResultsScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="MainHBox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="ContentPicker" type="PanelContainer" parent="VBoxContainer/MainHBox"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme_type_variation = &"SideTabBar"

[node name="Tabs" type="VBoxContainer" parent="VBoxContainer/MainHBox/ContentPicker"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/MainHBox"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_type_variation = &"SideBarContent"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MainHBox/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="ContentContainer" type="MarginContainer" parent="VBoxContainer/MainHBox/PanelContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 4

[node name="PreviewPanel" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_type_variation = &"TextBox"

[node name="CloseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
focus_mode = 0
mouse_default_cursor_shape = 2

[connection signal="pressed" from="VBoxContainer/TopHBox/Language" to="." method="_on_language_pressed"]
